--- a/tedx/src/app/globals.css
+++ b/tedx/src/app/globals.css
@@ -40,3 +40,38 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+.arrow-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.arrow {
+  animation: moveDown 1s ease-in-out infinite;
+}
+.arrow:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.arrow:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.arrow:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+@keyframes moveDown {
+  0% {
+    transform: translateY(0);
+
+  }
+  50% {
+    transform: translateY(20px);
+
+  }
+  100% {
+    transform: translateY(0);
+
+  }
+}
