--- a/tedx/src/app/globals.css
+++ b/tedx/src/app/globals.css
@@ -107,3 +107,24 @@ canvas {
   touch-action: none;
   animation: fade-in 5s ease 1s forwards;
 }
+
+
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
